[package]
name = "string_sum"
version = "0.1.0"
authors = ["harismuzaffer <harismuzaffer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "string_sum"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "*"
features = ["extension-module"]

[dependencies]
